--- a/package.json
+++ b/package.json
@@ -1,88 +1,44 @@
 {
-
   "scripts": {
-
-    "start": "webpack serve --open --config webpack.dev.js",
-
-    "build": "webpack --config webpack.dev.js",
-
+    "start": "webpack serve --open --config webpack.dev.mjs",
+    "build": "webpack --config webpack.prod.mjs",
     "test": "jest"
-
   },
-
   "devDependencies": {
-
     "@babel/cli": "^7.26.4",
-
     "@babel/core": "^7.26.10",
-
     "@babel/plugin-transform-runtime": "^7.26.10",
-
     "@babel/preset-env": "^7.26.9",
-
     "babel-jest": "^29.7.0",
-
-    "css-loader": "^7.1.2",
-
-    "html-loader": "^5.1.0",
-
-    "html-webpack-plugin": "^5.6.3",
-
-    "jest": "^29.7.0",
-
-    "style-loader": "^4.0.0",
-
-    "webpack": "^5.97.1",
-
-    "webpack-cli": "^6.0.1",
-
-    "webpack-dev-server": "^5.2.0",
-
-    "webpack-merge": "^6.0.1"
-
-  },
-
-  "dependencies": {
-
-    "@babel/runtime-corejs3": "^7.26.10",
-
-    "chance": "^1.1.12",
-
+    "babel-loader": "^10.0.0",
     "core-js": "^3.41.0",
-
+    "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
+    "html-webpack-plugin": "^5.6.3",
+    "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1"
+  },
+  "dependencies": {
+    "chance": "^1.1.12",
     "uuid": "^11.0.5"
-
   },
-
   "name": "the-odin-project--battleship",
-
   "version": "1.0.0",
-
   "main": "webpack.common.js",
-
   "type": "module",
-
   "repository": {
-
     "type": "git",
-
     "url": "git+https://github.com/tot121212/The-Odin-Project--Battleship.git"
-
   },
-
   "author": "",
-
   "license": "ISC",
-
   "bugs": {
-
     "url": "https://github.com/tot121212/The-Odin-Project--Battleship/issues"
-
   },
-
   "homepage": "https://github.com/tot121212/The-Odin-Project--Battleship#readme",
-
   "description": ""
-
 }
-
