--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.26.10",
     "@babel/plugin-transform-runtime": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "core-js": "^3.41.0",
@@ -40,5 +41,6 @@
     "url": "https://github.com/tot121212/The-Odin-Project--Battleship/issues"
   },
   "homepage": "https://github.com/tot121212/The-Odin-Project--Battleship#readme",
+  "keywords": [],
   "description": ""
 }
