--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.10",
-    "@babel/plugin-transform-runtime": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@types/jest": "^29.5.14",
+    "assert": "^2.1.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "core-js": "^3.41.0",
@@ -17,6 +17,9 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "node-libs-browser": "^2.2.1",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
@@ -29,8 +32,7 @@
   },
   "name": "the-odin-project--battleship",
   "version": "1.0.0",
-  "main": "webpack.common.js",
-  "type": "module",
+  "main": "webpack.common.mjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tot121212/The-Odin-Project--Battleship.git"
