--- a/babel.config.json
+++ b/babel.config.json
@@ -8,7 +8,9 @@
           "firefox": "60",
           "chrome": "67",
           "safari": "11.1"
-        }
+        },
+        "useBuiltIns": "entry",
+        "corejs": 3
       }
     ]
   ],
