--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
     "@babel/preset-env": "^7.26.9",
     "@types/jest": "^29.5.14",
     "@types/webpack-env": "^1.18.8",
-    "assert": "^2.1.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
+    "buffer": "^6.0.3",
     "core-js": "^3.41.0",
     "css-loader": "^7.1.2",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
-    "node-libs-browser": "^2.2.1",
-    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
@@ -31,7 +29,6 @@
     "chance": "^1.1.12",
     "uuid": "^11.0.5"
   },
-  "type": "module",
   "name": "the-odin-project--battleship",
   "version": "1.0.0",
   "main": "webpack.common.mjs",
