--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,23 @@
 {
   "scripts": {
-    "start": "webpack serve --open --config webpack.dev.mjs",
-    "build": "webpack --config webpack.prod.mjs",
+    "start": "node ./main.mjs",
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.26.4",
-    "@babel/core": "^7.26.10",
-    "@babel/preset-env": "^7.26.9",
     "@types/jest": "^29.5.14",
-    "@types/webpack-env": "^1.18.8",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^10.0.0",
     "buffer": "^6.0.3",
     "core-js": "^3.41.0",
-    "css-loader": "^7.1.2",
-    "html-loader": "^5.1.0",
-    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
-    "process": "^0.11.10",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0",
-    "webpack-merge": "^6.0.1"
+    "process": "^0.11.10"
   },
   "dependencies": {
     "chance": "^1.1.12",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "ws": "^8.18.1"
   },
   "name": "the-odin-project--battleship",
   "version": "1.0.0",
-  "main": "webpack.common.mjs",
+  "main": "main.mjs",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tot121212/The-Odin-Project--Battleship.git"
