--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "node ./main.mjs",
+    "start": "nodemon node ./main.mjs",
     "test": "jest"
   },
   "devDependencies": {
@@ -8,6 +8,7 @@
     "buffer": "^6.0.3",
     "core-js": "^3.41.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "process": "^0.11.10"
   },
   "dependencies": {
