--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,10 @@
     "start": "webpack serve --open --config webpack.dev.mjs",
     "build": "webpack --config webpack.prod.mjs"
   },
+  "dependencies": {
+    "uuid": "^11.1.0",
+    "ws": "^8.18.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.10",
@@ -32,8 +36,5 @@
   },
   "homepage": "https://github.com/tot121212/The-Odin-Project--Battleship#readme",
   "keywords": [],
-  "description": "",
-  "dependencies": {
-    "ws": "^8.18.1"
-  }
+  "description": ""
 }
